--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
+:root {
+    --section-rotate: 9vh;
+}
+
 html,
 body {
     padding: 0;
