--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,8 @@ html,
 body {
     padding: 0;
     margin: 0;
-    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Open Sans', sans-serif; */
+    font-family: 'Roboto', sans-serif;
 }
 
 a {
