--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,7 @@ body {
     margin: 0;
     /* font-family: 'Open Sans', sans-serif; */
     font-family: 'Roboto', sans-serif;
+    overflow-x: hidden;
 }
 
 a {
